--- a/urban-octo-telegram-main/Develop/index.html
+++ b/urban-octo-telegram-main/Develop/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon "A Marketing Agency"</title>
+    <meta name="description" content="Horiseon Marketing Agency offering marketing services">
+    <meta name="keywords" content="SEO, Online Reputation Management, Lead Generation, Cost Management, Brand Awareness, Social Media Marketing">
 </head>
 
 <body>
@@ -27,21 +29,21 @@
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="group of co-workers hanging out" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Word Reputation on a laptop screen above an ascending bar graph & phone in left hand out user" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt= "multiple people at table with social media image icons with words like,share,media tweet on it." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -50,29 +52,29 @@
     </div>
     <div class="benefits">
         <div class="benefit-lead">
+            <img src="./assets/images/lead-generation.png" alt=" circle with dollar sign inside, above is a downward arrow inside upside down triangle, above is a half of gear" />
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
+            <img src="./assets/images/brand-awareness.png" alt="light bulb head on business attire body" />
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
+            <img src="./assets/images/cost-management.png" alt="cicles with dollar signs inside infront of a half gear"></img> 
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
